Update to actual version
- Add config's
- UI fixes
- GC / Heap FIX
- Readme update
- Styles fixes